# capsule-system

./: Capsule.toml  Cargo.toml  README.md  rust-toolchain.toml
src/: lib.rs
src/skills/capsule-development/: SKILL.md
